Update SN&PT “profile”

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -4,134 +4,134 @@ profile:
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: https://www.youtube.com/channel/UCxZyi1KvyJbe2NypEgcjc_Q
     youtubelogo: /images/uploads/youtubeLogoSVG.svg
-  - featuredImage: /images/uploads/01.png
-    flag: /images/uploads/FlagPortugal.jpg
+  - title: 2. VittorioGPYT
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-    title: 2. PT Blaze
   - title: 3. PT Mike
     featuredImage: /images/uploads/Myke.png
     flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 4. VittorioGPYT
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/flagbrazil.jpg
+  - featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+    title: 4. PT Blaze
   - featuredImage: /images/uploads/antrax1.png
     flag: /images/uploads/FlagPortugal.jpg
     title: 5. PT Antrax
     linkyoutube: https://www.youtube.com/channel/UCRXEh6G5JNLBqrOMu_bk90Q
     youtubelogo: /images/uploads/youtubeLogoSVG.svg
-  - title: 6. SN A.S.A.
+  - title: 6. SN Diego
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 7. SN MLOPES
+  - title: 7. RS M4ster
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 8. PT Kazaka
+    featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 9. SN MLOPES
     featuredImage: /images/uploads/snlopes.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 8. SN Diego
+  - title: 10. SN A.S.A.
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 9. SN Biil
-    featuredImage: /images/uploads/02.png
-    flag: /images/uploads/flagbrazil.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 10. PT Kazaka
-    featuredImage: /images/uploads/02.png
-    flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 11. SN Ander
-    featuredImage: /images/uploads/snAnder.png
-    flag: /images/uploads/flagbrazil.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 12. SN CHINA
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/flagbrazil.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 13. PT Jezandapuss
+  - title: 11. PT Jezandapuss
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 14. SN Rodrigo
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/flagbrazil.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 15. Sn Murdock
+  - title: 12. SN Murdock
     featuredImage: /images/uploads/snMurdock.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 16. SN ALLAN
+  - title: 13. SN CHINA
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 17. SN TELL
+  - title: 14. SN Ander
+    featuredImage: /images/uploads/snAnder.png
+    flag: /images/uploads/flagbrazil.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 15. SN ALLAN
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/flagbrazil.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 16. SN TELL
     featuredImage: /images/uploads/snTell.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 18. PT RR
+  - title: 17. PT RR
     featuredImage: /images/uploads/rr.png
     flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: https://www.youtube.com/channel/UCpHyfvgXfBgrS3OiHtjRBMA
     youtubelogo: /images/uploads/youtubeLogoSVG.svg
-  - title: 19. PT Titana
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 20. SN Betinho
+  - title: 18. SN Betinho
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 21. PT BM®
+  - title: 19. PT Maximus®
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 22. Kauan(WG)
+  - title: 20. SN AS
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/flagbrazil.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 21. PT Titana
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 22. SN Rodrigo
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/flagbrazil.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 23. SN Biil
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 23. SN Samuka
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/flagbrazil.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 24. SN AS
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/flagbrazil.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 25. PT N8N
+  - title: 24. SN Guijona
     featuredImage: /images/uploads/02.png
-    flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 26. PT Maximus®
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 27. SN KlaucK
-    featuredImage: /images/uploads/snKlauckNew.png
     flag: /images/uploads/flagbrazil.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 25. SN Irenno
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/flagbrazil.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 26. SN Samuka
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/flagbrazil.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 27. PT Reforma
+    featuredImage: /images/uploads/slash.png
+    flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 28. PT FT1
@@ -139,103 +139,105 @@ profile:
     flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 29. RS kingito
-    featuredImage: /images/uploads/king.png
-    flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: https://www.youtube.com/channel/UCita2FyOl-Ulb4ucyc3g_Kg
-    youtubelogo: /images/uploads/youtubeLogoSVG.svg
-  - title: 30. PT M@risa
+  - title: 29. SN KlaucK
+    featuredImage: /images/uploads/snKlauckNew.png
+    flag: /images/uploads/flagbrazil.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 30. PT BM®
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 31. SN Guijona
+  - title: 31. Kauan(WG)
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 32. SN Irenno
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/flagbrazil.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 33. PT Pat1tuh
+  - title: 32. PT M@risa
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 34. PT Biclas
-    featuredImage: /images/uploads/web-master.png
+  - title: 33. PT N8N
+    featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: https://www.youtube.com/channel/UCivk-ma9dv0VbhrBIHok2PQ
-    youtubelogo: /images/uploads/youtubeLogoSVG.svg
-  - title: 35. SN ACQUA
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 36. SN Júlio
+  - title: 34. SN Júlio
     featuredImage: /images/uploads/profileSnJulio.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 37. SN LukBagart
+  - title: 35. SN Sieg
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/flagbrazil.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 36. SN LukBagart
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 38. PT Reforma
-    featuredImage: /images/uploads/slash.png
-    flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 39. PT Papuça
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 40. SN Sieg
+  - title: 37. PT Noilas
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 41. PT Mykarr
+  - title: 38. PT Biclas
+    featuredImage: /images/uploads/web-master.png
+    flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: https://www.youtube.com/channel/UCivk-ma9dv0VbhrBIHok2PQ
+    youtubelogo: /images/uploads/youtubeLogoSVG.svg
+  - title: 39. RS kingito
+    featuredImage: /images/uploads/king.png
+    flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: https://www.youtube.com/channel/UCita2FyOl-Ulb4ucyc3g_Kg
+    youtubelogo: /images/uploads/youtubeLogoSVG.svg
+  - title: 40. PT Zeto
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 42. SN WOLF
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 43. PT Zeto
-    featuredImage: /images/uploads/01.png
-    flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: null
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 44. SN Marcelo
+  - title: 41. SN Marcelo
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 45. PT MrWeed
+  - title: 42. PT Mykarr
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 46. PT SimaoSpeed
+  - title: 43. PT SimaoSpeed
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 47. HAN SOLO
+  - title: 44. SN ACQUA
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
-  - title: 48. mivacotwitch
+  - title: 45. HAN SOLO
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 46. SN WOLF
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 47. Rian Felipe
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 48. PT MrWeed
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+  - title: 49. SN Gardi
+  - title: 50. SN Benicio
