--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -240,4 +240,12 @@ profile:
     linkyoutube: null
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 49. SN Gardi
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 50. SN Benicio
+    featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: null
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
