--- a/_data/academia.yaml
+++ b/_data/academia.yaml
@@ -110,3 +110,6 @@ profileacademia:
   - title: 37. Malico2
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+  - title: 46. Pt Artur
+    featuredImage: /images/uploads/ptartur.png
+    flag: /images/uploads/FlagPortugal.jpg
