--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clean-css": "^4.2.3",
     "eleventy-plugin-blog-tools": "^0.3.1",
     "eleventy-plugin-seo": "^0.5.1",
+    "immer": "^8.0.1",
     "netlify-cms-app": "^2.14.14",
     "qinmingyuan_turbolinks": "^5.3.0-beta.2",
     "terser": "^5.3.8",
