--- a/admin/config.yml
+++ b/admin/config.yml
@@ -43,6 +43,14 @@ collections:
             collapsed: true
             fields:
               - { label: "Title", name: "title", widget: "string" }
+              - {
+                  label: "Featured Image",
+                  name: "featuredImage",
+                  widget: "image",
+                }
+              - { label: "flag", name: "flag", widget: "image" }
+              - { label: "Youtube", name: "linkyoutube", widget: string }
+              - { label: "Youtube Logo", name: "youtubelogo", widget: "image" }
   - label: "Portugal II"
     name: "PTII"
     editor:
