--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "immer": "^8.0.1",
     "netlify-cms-app": "^2.14.14",
     "qinmingyuan_turbolinks": "^5.3.0-beta.2",
-    "terser": "^5.3.8",
-    "turbolinks": "^5.2.0"
+    "terser": "^5.3.8"
   },
   "directories": {
     "lib": "lib"
