--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "netlify-cms-app": "^2.14.14",
     "qinmingyuan_turbolinks": "^5.3.0-beta.2",
     "terser": "^5.3.8",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "typescript": "^4.1.3",
+    "yarn": "^1.22.10"
   },
   "directories": {
     "lib": "lib"
